--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -20,8 +20,8 @@
     </header>
 
     <ul>
-      {{#each tasks}}
-        {{> task}}
+      {{#each courses}}
+        {{> course}}
       {{/each}}
     </ul>
   </div>
