Add working date filter and initial studio info

--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -41,11 +41,11 @@
 
       <form>
         From:
-        <input id="startdate-filter" type="date" valueasdate="{{nowdate}}" />
-        <input id="starttime-filter" type="time" valueasdate="{{nowtime}}" />
+        <input id="startdate-filter" type="date" required value="{{startdate}}" />
+        <input id="starttime-filter" type="time" required value="{{starttime}}" />
         To:
-        <input id="enddate-filter" type="date" valueasdate="{{nowdate}}" />
-        <input id="endtime-filter" type="time" valueasdate="{{latertime}}" />
+        <input id="enddate-filter" type="date" required value="{{enddate}}" />
+        <input id="endtime-filter" type="time" required value="{{endtime}}" />
     </form>
     </header>
 
