Display dates correctly for classes

--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -4,8 +4,11 @@
       <h1>Available classes - {{availableCount}}</h1>
 
       <label class="hide-completed">
-        <input type="checkbox" />
-        Hide completed Tasks
+        <input type="checkbox" />Hide completed Tasks
+      </label>
+
+      <label class="scrape-page">
+        <input type="button" value="Scrape classes" />
       </label>
 
       <!-- default login buttons, can be customized -->
