--- a/imports/ui/course.html
+++ b/imports/ui/course.html
@@ -2,6 +2,6 @@
   <li>
     <button class="delete">&times;</button>
     <input type="checkbox" class="toggle-checked" />
-    <span class="text"><strong>{{name}}</strong> - {{teacher}} - {{studio}} - {{start}} - {{end}} - {{url}}</span>
+    <span class="text"><strong>{{name}}</strong> - {{teacher}} - {{studio}} - {{startEnd}}</span>
   </li>
 </template>
