Hookup the scraper to the front-end
That was very painful.  Promises are beautiful structures and fun
to use, but they're very trick at the outset.  Everything's finally
working though!

--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -7,9 +7,14 @@
         <input type="checkbox" />Hide completed Tasks
       </label>
 
-      <label class="scrape-page">
-        <input type="button" value="Scrape classes" />
+      <label class="scrape-all">
+        <input type="button" value="Scrape all classes" />
       </label>
+
+      <form class="scrape-mbo-page">
+        <input type="number" name="studioid" />
+        <input type="submit" value="Scrape classes" />
+      </form>
 
       <!-- default login buttons, can be customized -->
       <!--{{> loginButtons}} -->
