Add ability to scrape multiple pages with one click

--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -7,9 +7,9 @@
         <input type="checkbox" />Hide completed Tasks
       </label>
 
-      <label class="scrape-all">
+      <form class="scrape-all">
         <input type="button" value="Scrape all classes" />
-      </label>
+      </form>
 
       <form class="scrape-mbo-page">
         <input type="number" name="studioid" />
