Integrate additional filtering on location

--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -13,6 +13,7 @@
 
       <form class="scrape-mbo-page">
         <input type="number" name="studioid" />
+        <input type="text" name="locale" />
         <input type="submit" value="Scrape classes" />
       </form>
 
