Update meteor packages, change check-box style

--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -3,8 +3,8 @@
     <header>
       <h1>Available classes - {{availableCount}}</h1>
 
-      <label class="hide-completed">
-        <input type="checkbox" />Hide completed Tasks
+      <label class="show-starred">
+        <input type="checkbox" />Show checked classes
       </label>
 
       <form class="scrape-all">
