--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -39,6 +39,44 @@
           {{/if}}
 
           <form class="form-horizontal">
+            <div class="panel-group">
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h4 class="panel-title">
+                    <a class="accordion-toggle" data-toggle="collapse" href="#styleform">Style</a>
+                  </h4>
+                </div>
+                <div id="styleform" class="panel-body panel-collapse collapse in">
+                  <div class="row">
+                    {{#each styles}}
+                      <div class="col-sm-2 col-xs-4">
+                        <label class="checkbox-inline">
+                          <input type="checkbox" class="style_filter" value="{{this}}">{{this}}
+                        </label>
+                      </div>
+                    {{/each}}
+                  </div>
+                </div>
+              </div>
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h4 class="panel-title">
+                    <a class="accordion-toggle" data-toggle="collapse" href="#postcodeform">Area</a>
+                  </h4>
+                </div>
+                <div id="postcodeform" class="panel-body panel-collapse collapse in">
+                  <div class="row">
+                    {{#each postcodes}}
+                      <div class="col-sm-1 col-xs-2">
+                        <label class="checkbox-inline">
+                          <input type="checkbox" class="postcode_filter" value="{{this}}">{{this}}
+                        </label>
+                      </div>
+                    {{/each}}
+                  </div>
+                </div>
+              </div>
+            </div>
             <div class="form-group">
               <label for="class_filter" class="col-lg-1 col-sm-1 col-xs-2">Class</label>
               <div class="col-lg-2 col-sm-3 col-xs-10">
@@ -101,11 +139,13 @@
     <table class="table table-striped table-hover">
       <thead> <tr>
         <th class="col-xs-1 no-right-padding"></th>
-        <th class="col-xs-3">Class</th>
+        <th class="col-xs-2">Class</th>
         <th class="col-xs-2">Day</th>
         <th class="col-xs-2">Time</th>
         <th class="col-xs-2">Teacher</th>
         <th class="col-xs-2">Studio</th>
+        <th class="col-xs-1">Style</th>
+        <th class="col-xs-1">Area</th>
       </tr> </thead>
       <tbody>
         {{#each courses}}
