Speed up retrieval of studio info from static file

--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -80,7 +80,7 @@
             <div class="form-group">
               <label for="class_filter" class="col-lg-1 col-sm-1 col-xs-2">Class</label>
               <div class="col-lg-2 col-sm-3 col-xs-10">
-                <input id="class_filter" type="search" list="classes" class="form-control" placeholder="Enter class" />
+                <input id="class_filter" type="text" list="classes" class="form-control" placeholder="Enter class" />
               </div>
               <datalist id="classes">
                 {{#each names}}
