Add modal popup and refactor templates

--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -136,23 +136,7 @@
       </header>
     </div>
 
-    <table class="table table-striped table-hover">
-      <thead> <tr>
-        <th class="col-xs-1 no-right-padding"></th>
-        <th class="col-xs-2">Class</th>
-        <th class="col-xs-2">Day</th>
-        <th class="col-xs-2">Time</th>
-        <th class="col-xs-2">Teacher</th>
-        <th class="col-xs-2">Studio</th>
-        <th class="col-xs-1">Style</th>
-        <th class="col-xs-1">Area</th>
-      </tr> </thead>
-      <tbody>
-        {{#each courses}}
-          {{> course}}
-        {{/each}}
-      </tbody>
-    </table>
+    {{> coursetable parentState=state }}
   </div>
 </body>
 
