Add booking link for classes

--- a/imports/ui/coursetable.html
+++ b/imports/ui/coursetable.html
@@ -33,13 +33,11 @@
         <div class="modal-body">
           <h5>{{studio}}</h5>
           <p>
-            Studio - 
-            <a href="{{url}}" target="_blank">{{url}}
+            <a href="{{url}}" target="_blank">Studio
               <span class="glyphicon glyphicon-new-window" aria-hidden="true"></span>
             </a>
             <br />
-            Booking -  
-            <a href="{{schedule}}" target="_blank">{{schedule}}
+            <a href="{{booking}}" target="_blank">Booking
               <span class="glyphicon glyphicon-new-window" aria-hidden="true"></span>
             </a>
           </p>
