Improve performance and integrate Kadira

--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -136,7 +136,7 @@
       </header>
     </div>
 
-    {{> coursetable parentState=state }}
+    {{> coursetable courses=courses }}
   </div>
 </body>
 
