Decrease class limit from 1000 to 500

--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -14,7 +14,7 @@
           {{#if showAlert}}
             <div class="alert alert-warning alert-dismissible" role="alert">
               <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-               Over 1000 results returned, please limit search criteria.
+              Over {{availableCount}} results returned, please limit search criteria.
             </div>
           {{/if}}
         </div>
