Finish admin page setup

--- a/imports/ui/coursesearch.html
+++ b/imports/ui/coursesearch.html
@@ -1,4 +1,4 @@
-<body>
+<template name="coursesearch">
   <div class="container">
     <div class="panel-group">
       <header>
@@ -138,5 +138,4 @@
 
     {{> coursetable courses=courses }}
   </div>
-</body>
-
+</template>
