Log to winston and see logfiles from admin panel

--- a/imports/ui/scraper.html
+++ b/imports/ui/scraper.html
@@ -7,4 +7,13 @@
     <input type="number" name="studioid" />
     <input type="submit" value="Scrape classes" />
   </form>
+
+  <form class="get-log-file">
+    <input name="logfilename" value="out.log" />
+    <input type="submit" value="Get logs" />
+    <br />
+    <textarea name="logfilecontents" rows="20" cols="150" readonly="true">
+      Log file appears here.
+    </textarea>
+  </form>
 </template>
