Clean up UI and fix distinct DB queries for null

--- a/imports/ui/coursetable.html
+++ b/imports/ui/coursetable.html
@@ -1,8 +1,8 @@
 <template name="coursetable">
   <table class="table table-striped table-hover">
     <thead> <tr>
-      <th class="col-xs-1 no-right-padding"></th>
-      <th class="col-xs-2">Class</th>
+      <!--<th class="col-xs-1 no-right-padding"></th>-->
+      <th class="col-xs-3">Class</th>
       <th class="col-xs-2">Day</th>
       <th class="col-xs-2">Time</th>
       <th class="col-xs-2">Teacher</th>
